--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,46 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Homepage</title>
+  <link rel="stylesheet" href="menu.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      color: white;
+      background-image: url(starbg.png)
+    }
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    h1 {
+      margin: 0;
+    }
+    main {
+      padding: 20px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>This is Homepage</h1>
+  </header>
+  <ul>
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="form.html">Form</a></li>
+  <li><a href="">Zodiac Signs</a></li>
+    <ul id="submenu">
+      <li></li>
+    </ul>
+</ul>
+  <main>
+    <h2>About Us</h2>
+    <p>You can find horoscopes information in our webpage.</p>
+  </main>
+</body>
+</html>
